correction déploiement base de donnee

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_PASSWORD=your-secure-db-password-here
 SECURITY_PASSWORD_SALT=your-secure-salt-here
 
 # Admin user settings (for initial setup)
+ADMIN_USERNAME=admin
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=your-secure-admin-password-here
 
