--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "8000:8000"
     volumes:
       - app-data:/app/instance
+      - ./init_db.sh:/app/init_db.sh
     networks:
       - app-network
     environment:
