--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,34 +12,38 @@ services:
     volumes:
       - ./app-data:/app/instance
       - ./init_db.sh:/app/init_db.sh
-    networks:
-      - dechets-network
-      - traefik_traefik
     environment:
       - FLASK_APP=run.py
-      - FLASK_DEBUG=0
+      - FLASK_ENV=production
       - DATABASE_URL=postgresql://postgres:${DB_PASSWORD}@db:5432/waste_registry
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.docker.network=traefik_traefik'
+      - DB_PASSWORD=${DB_PASSWORD}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_EMAIL=${ADMIN_EMAIL:-admin@example.com}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123}
+    networks:
+      - dechets-network
+    #   - traefik_traefik
+    # labels:
+    #   - 'traefik.enable=true'
+    #   - 'traefik.docker.network=traefik_traefik'
       
-      # Middleware pour la redirection HTTP vers HTTPS
-      - 'traefik.http.middlewares.redirection.redirectScheme.scheme=https'
-      - 'traefik.http.middlewares.redirection.redirectScheme.permanent=true'
+    #   # Middleware pour la redirection HTTP vers HTTPS
+    #   - 'traefik.http.middlewares.redirection.redirectScheme.scheme=https'
+    #   - 'traefik.http.middlewares.redirection.redirectScheme.permanent=true'
       
-      # Configuration du service
-      - 'traefik.http.services.dechets_tls.loadbalancer.server.port=8000'
+    #   # Configuration du service
+    #   - 'traefik.http.services.dechets_tls.loadbalancer.server.port=8000'
 
-      # Routeur pour le trafic HTTP (redirigé vers HTTPS)
-      - 'traefik.http.routers.dechets_http.rule=Host(`${DOMAIN}`)'
-      - 'traefik.http.routers.dechets_http.entrypoints=http'
-      - 'traefik.http.routers.dechets_http.middlewares=redirection'
+    #   # Routeur pour le trafic HTTP (redirigé vers HTTPS)
+    #   - 'traefik.http.routers.dechets_http.rule=Host(`${DOMAIN}`)'
+    #   - 'traefik.http.routers.dechets_http.entrypoints=http'
+    #   - 'traefik.http.routers.dechets_http.middlewares=redirection'
       
-      # Routeur pour le trafic HTTPS
-      - 'traefik.http.routers.dechets_tls.rule=Host(`${DOMAIN}`)'
-      - 'traefik.http.routers.dechets_tls.entrypoints=https'
-      - 'traefik.http.routers.dechets_tls.tls.certresolver=webssl'
-      - 'traefik.http.routers.dechets_tls.tls=true'
+    #   # Routeur pour le trafic HTTPS
+    #   - 'traefik.http.routers.dechets_tls.rule=Host(`${DOMAIN}`)'
+    #   - 'traefik.http.routers.dechets_tls.entrypoints=https'
+    #   - 'traefik.http.routers.dechets_tls.tls.certresolver=webssl'
+    #   - 'traefik.http.routers.dechets_tls.tls=true'
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -70,5 +74,5 @@ volumes:
 networks:
   dechets-network:
     driver: bridge
-  traefik_traefik:  
-    external: true
+  # traefik_traefik:  
+  #   external: true
