--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app-data:/app/instance
-      - ./init_db.sh:/app/init_db.sh
+      - app-data:/app/instance
     environment:
       - FLASK_APP=run.py
-      - FLASK_ENV=production
+      - FLASK_DEBUG=0
       - DATABASE_URL=postgresql://postgres:${DB_PASSWORD}@db:5432/waste_registry
       - DB_PASSWORD=${DB_PASSWORD}
       - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
@@ -22,28 +21,6 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123}
     networks:
       - dechets-network
-    #   - traefik_traefik
-    # labels:
-    #   - 'traefik.enable=true'
-    #   - 'traefik.docker.network=traefik_traefik'
-      
-    #   # Middleware pour la redirection HTTP vers HTTPS
-    #   - 'traefik.http.middlewares.redirection.redirectScheme.scheme=https'
-    #   - 'traefik.http.middlewares.redirection.redirectScheme.permanent=true'
-      
-    #   # Configuration du service
-    #   - 'traefik.http.services.dechets_tls.loadbalancer.server.port=8000'
-
-    #   # Routeur pour le trafic HTTP (redirigé vers HTTPS)
-    #   - 'traefik.http.routers.dechets_http.rule=Host(`${DOMAIN}`)'
-    #   - 'traefik.http.routers.dechets_http.entrypoints=http'
-    #   - 'traefik.http.routers.dechets_http.middlewares=redirection'
-      
-    #   # Routeur pour le trafic HTTPS
-    #   - 'traefik.http.routers.dechets_tls.rule=Host(`${DOMAIN}`)'
-    #   - 'traefik.http.routers.dechets_tls.entrypoints=https'
-    #   - 'traefik.http.routers.dechets_tls.tls.certresolver=webssl'
-    #   - 'traefik.http.routers.dechets_tls.tls=true'
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -58,7 +35,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     networks:
       - dechets-network
     healthcheck:
@@ -74,5 +51,3 @@ volumes:
 networks:
   dechets-network:
     driver: bridge
-  # traefik_traefik:  
-  #   external: true
